--- a/aboutmecss.css
+++ b/aboutmecss.css
@@ -123,3 +123,20 @@ li a:hover {
 .space4{
   height:120px;
 }
+.nextthree{
+
+  width:1050px;
+  height:255px;
+  background-color: rgba(168,168,168,0.4)
+}
+.aboutthis{
+  width:300px;
+  height:200px
+  display: inline-block;
+  font-size: 16.85px;
+}
+.tablemap{
+  margin-top: 15px;
+  margin-right: 100px;
+
+}
